Fix: default cursor is now visible on top of the scrollbar

--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,7 @@
     background-repeat: no-repeat;
     background-position: center;
 
-    /*Glows if someone grabs it*/
-    border-radius: 4px;
+    cursor: default !important;
 }
 
 ::-webkit-scrollbar-thumb:hover{
